--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="time">time</string>
     <string name="detail">detail</string>
     <string name="author">author</string>
+    <string name="search">Search</string>
 </resources>
